--- a/Prace v hodine/Nová složka/styles.css
+++ b/Prace v hodine/Nová složka/styles.css
@@ -51,3 +51,47 @@ button{
     padding: 15px 40px;
     font-weight: bold;
 }
+
+#sec-2 {
+    display: flex;
+}
+
+#sec-2 > div {
+    width: 50%;
+    box-sizing: border-box;
+    background-color: black;
+    min-height: 100vh;
+    text-align: center;
+    
+    
+}
+
+#context button{
+    border: 2px solid white;
+    justify-self: flex-start;
+    align-self: flex-start;
+    margin-top: 100px;
+}
+
+#context h2{
+    font-size: 3rem;
+}
+
+#img-container{
+    background-image: url(https://www.betterup.com/hubfs/Happy-work-team-cheering-and-celebrating-at-meeting-team-collaboration.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+#sec-1{
+    background-color: cornflowerblue;
+    display: flex;
+    gap: 20%;
+    
+}
+
+#sec-1 h1{
+    width: 400px;
+
+}
